correct file spelling error

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Library</title>
     <link rel="stylesheet" href="./style.css">
-    <script src="libraryy.js" defer></script>
+    <script src="library.js" defer></script>
 </head>
 <body>
     <button id="newBookBtn">NEW BOOK</button>
